# rx-monte-carlo

./: .gitignore  LICENSE  README.md  pyproject.toml
simulation/: __main__.py
simulation/scenarios/: __init__.py  combined_teams.py  current.py  no_im.py  status_quo.py  utils.py
