[tool.poetry]
name = "rx-monte-carlo"
version = "0.1.0"
description = "Monte Carlo simulations to test schedule scenarios"
authors = ["Study Buffalo <joshua@torrance.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
